samples/_failures_safe/1761701460_2b1585_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4fd35eee.c: In function ‘main’:
./samples/SAFE/__tmp_4fd35eee.c:161:5: error: expected expression at end of input
  161 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_4fd35eee.c:161:5: error: expected declaration or statement at end of input
